<resources>
    <string name="app_name">EComerce</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login_in">Login</string>
    <string name="login_failed">"Usuario o contraseña incorrecta!"</string>
    <string name="txt_forget_password">Olvidó su contraseña?</string>
    <string name="txt_register">Registrarse</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="action_settings">Settings</string>

    <string name="register_title">Registro</string>
    <string name="register_name">Su Nombre</string>
    <string name="register_user">Usuario</string>
    <string name="register_email">Su Email</string>
    <string name="register_passwd">Contraseña</string>
    <string name="register_passwd2">Confirmar Contraseña</string>
    <string name="register_phone">Telefono</string>
    <string name="register_button">SUBMIT</string>
    <string name="register_login">Go To Login</string>
    <string name="register_done">Usuario Registrado con Exito!</string>

    <string name="forget_title">Recuperar Password</string>
    <string name="forget_email">Su Email</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_categorias">Categorías</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_seguimiento">Seguimiento despacho</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="logo">logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
